--- a/full.html
+++ b/full.html
@@ -10,10 +10,12 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            background-color: rgb(45, 54, 66); /* Example background color */
         }
 
         html, body {
             height: 100%;
+            background-color: rgb(45, 54, 66); /* Example background color */
         }
 
         #full-screen-div {
