--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
     <h3>by Laura Jane Coats 1986</h3>
     <hr>
     <p>
-        &emsp;&emsp; In 1980's and 90's my mother wrote and illustrated children's books. She studied fine art at UC Davis in the 1970's and continued to practice painting while her career as an illustrater and graphic designer took her from her home town of Sacramento, CA to New York, San Francisco, Marin County and her final home deep in the forest outside Nevada City. She died unexpectedly in 2018 and left behind a legacy of art, inspiration and a joy for life that remains in all who knew her. Although her books are currently out of print most can be found for a reasonable price on ebay. Regardless I wanted to make them accessible for free digitally. I hope they can bring you as much joy as they have brought me and my family.
+        &emsp;&emsp; In 1980's and 90's my mom wrote and illustrated children's books. She studied painting at UC Davis in the 1970's and had a vibrant career as illustrater and graphic designer which took her from her home town of Sacramento to New York, San Francisco, Marin County and her final home in Nevada City. She died unexpectedly in 2018 and left behind a legacy of art, inspiration and a joy for life that remains in all who knew her.have been out of print for a while they can be picked up affordably on ebay and in any case I wanted to make them free digitally. I hope they can bring you as much happiness as they've brought me and my family ❤
     </p>
     <a class="full-screen-button" href="./full.html">begin story</a>
     <div>
-        <img class="cover" src="./images/101.jpg" alt="101.jpg">
-        <img src="./images/102.jpg" alt="102.jpg">
-        <img src="./images/103.jpg" alt="103.jpg">
-        <img src="./images/IMG_7272.jpg" alt="IMG_7272.jpg">
-        <img src="./images/IMG_7273.jpg" alt="IMG_7273.jpg">
-        <img src="./images/IMG_7274.jpg" alt="IMG_7274.jpg">
-        <img src="./images/IMG_7275.jpg" alt="IMG_7275.jpg">
-        <img src="./images/IMG_7277.jpg" alt="IMG_7277.jpg">
-        <img src="./images/IMG_7278.jpg" alt="IMG_7278.jpg">
-        <img src="./images/IMG_7279.jpg" alt="IMG_7279.jpg">
-        <img src="./images/IMG_7280.jpg" alt="IMG_7280.jpg">
-        <img src="./images/IMG_7281.jpg" alt="IMG_7281.jpg">
-        <img src="./images/IMG_7282.jpg" alt="IMG_7282.jpg">
-        <img src="./images/IMG_7283.jpg" alt="IMG_7283.jpg">
-        <img src="./images/IMG_7284.jpg" alt="IMG_7284.jpg">
-        <img src="./images/IMG_7285.jpg" alt="IMG_7285.jpg">
-        <img src="./images/IMG_7286.jpg" alt="IMG_7286.jpg">
-        <img class="cover" src="./images/IMG_7287.jpg" alt="IMG_7287.jpg">
+        <img class="cover" src="./images/101.jpg">
+        <img src="./images/102.jpg">
+        <img src="./images/103.jpg">
+        <img src="./images/IMG_7272.jpg">
+        <img src="./images/IMG_7273.jpg">
+        <img src="./images/IMG_7274.jpg">
+        <img src="./images/IMG_7275.jpg">
+        <img src="./images/IMG_7277.jpg">
+        <img src="./images/IMG_7278.jpg">
+        <img src="./images/IMG_7279.jpg">
+        <img src="./images/IMG_7280.jpg">
+        <img src="./images/IMG_7281.jpg">
+        <img src="./images/IMG_7282.jpg">
+        <img src="./images/IMG_7283.jpg">
+        <img src="./images/IMG_7284.jpg">
+        <img src="./images/IMG_7285.jpg">
+        <img src="./images/IMG_7286.jpg">
+        <img class="cover" src="./images/IMG_7287.jpg">
     </div>
 </body>
 </html>
