Update style and text

--- a/index.html
+++ b/index.html
@@ -84,13 +84,17 @@
     .small-title-span {
         font-size: 45px;
     }
+
+    a {
+        color: rgb(231, 213, 213);
+    }
 </style>
 <body>
     <h1>Marcella <span class="small-title-span">and the</span> Moon</h1>
     <h3>by Laura Jane Coats 1986</h3>
     <hr>
     <p>
-        &emsp;&emsp; In 1980's and 90's my mom wrote and illustrated children's books. She studied painting at UC Davis in the 1970's and had a vibrant career as illustrater and graphic designer which took her from her home town of Sacramento to New York, San Francisco, Marin County and her final home in Nevada City. She died unexpectedly in 2018 and left behind a legacy of art, inspiration and a joy for life that remains in all who knew her.have been out of print for a while they can be picked up affordably on ebay and in any case I wanted to make them free digitally. I hope they can bring you as much happiness as they've brought me and my family ❤
+        &emsp;&emsp; In 80's and 90's my mom wrote and illustrated children's books. She studied painting at Davis in the 70's and had a wonderful career as illustrater and graphic designer which took her from her home town of Sacramento to New York, San Francisco, Marin County and her final home in Nevada City. She died unexpectedly in 2018 and left behind a legacy of art, inspiration and a joy for life that remains in all who knew her. <a class="link" href="https://www.ebay.com/sch/i.html?_from=R40&_trksid=p2334524.m570.l1313&_nkw=Laura+Jane+Coats+books&_sacat=0&_odkw=Laura+Jane+Coats+book&_osacat=0">Her books can be found on ebay</a> but I wanted to make them free digitally for our friends and family. You can find <a href="https://www.tombetthauser.com/">more books by her on my website.</a> I hope they can bring you as much happiness as they've brought us and our son. 
     </p>
     <a class="full-screen-button" href="./full.html">begin story</a>
     <div>
